ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-ingress
  namespace: mirrord-demo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mirrord-demo.com`)
      kind: Rule
      services:
        - name: service-a
          port: 80
